# contextkit-nemo

./: .gitignore  CMakeLists.txt  Makefile.am  Makefile.in  README  aclocal.m4  autoclean.sh  autogen.sh  configure  configure.ac
contextd/: Makefile.am  Makefile.in  main.vala  org.maemo.contextd.context  org.maemo.contextd.service.in
contextd/customer-tests/: Makefile.in  tests.xml
contextd/doc/: Makefile.am  Makefile.in
contextd/doc/html/: annotated.html  boolsysfspooler_8cpp.html  boolsysfspooler_8h.html  boolsysfspooler_8h_source.html  class_context_d_1_1_bool_sys_fs_pooler-members.html  class_context_d_1_1_bool_sys_fs_pooler.html  class_context_d_1_1_hal_device_interface-members.html  class_context_d_1_1_hal_device_interface.html  class_context_d_1_1_hal_manager_interface-members.html  class_context_d_1_1_hal_manager_interface.html  class_context_d_1_1_hal_provider-members.html  class_context_d_1_1_hal_provider.html  class_context_d_1_1_low_mem_provider-members.html  class_context_d_1_1_low_mem_provider.html  class_context_feature-members.html  class_context_feature.html  class_context_real_logger-members.html  class_context_real_logger.html  class_context_zero_logger-members.html  class_context_zero_logger.html  classes.html  contextd_8cpp.html  files.html  functions.html  functions_enum.html  functions_eval.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  haldeviceinterface_8cpp.html  haldeviceinterface_8h.html  haldeviceinterface_8h_source.html  halmanagerinterface_8cpp.html  halmanagerinterface_8h.html  halmanagerinterface_8h_source.html  halprovider_8cpp.html  halprovider_8h.html  halprovider_8h_source.html  (+16 more)
contextd/src/: Makefile.am  Makefile.in  contextd.cpp  halprovider.cpp  halprovider.h  logging.cpp  lowmemprovider.cpp  lowmemprovider.h
contextd/unit-tests/: Makefile.in
contextd/unit-tests/boolsysfspooler/: Makefile.am  Makefile.in
contextd/unit-tests/halprovider/: ContextProvider  Makefile.am  Makefile.in  halproviderunittest.cpp
contextd/unit-tests/lowmemprovider/: Makefile.am  Makefile.in
libcontextsubscriber-plugins/battery/: Makefile.am  README  battery.context  batteryplugin.cpp  batteryplugin.h  bmeipc.c
libcontextsubscriber-plugins/battery/sandbox/: Makefile.am  batterywatcher.h  main.c  main.cpp
libcontextsubscriber-plugins/battery/test/: Makefile.am  battest.cpp  battest.hpp
libcontextsubscriber-plugins/bluez/: .gitignore  Makefile.am  Makefile.in  bluez.context  bluezdevice.cpp  bluezdevice.h  bluezplugin.cpp  bluezplugin.h
libcontextsubscriber-plugins/customer-tests/: Makefile.am  Makefile.in  tests.xml  waitforsilence
libcontextsubscriber-plugins/customer-tests/bluez/: Makefile.am  runTests.sh  test-bluez-plugin.py  tests.xml
libcontextsubscriber-plugins/customer-tests/bluez-plugin/: Makefile.am  Makefile.in  bluez.context  run-locally.sh  test-bluez-plugin.py  tests.xml
libcontextsubscriber-plugins/customer-tests/dbusnamewatcher/: Makefile.am  dbusnamewatcher.cpp  dbusnamewatcher.h
libcontextsubscriber-plugins/customer-tests/fullscreen/: runTests.sh
libcontextsubscriber-plugins/customer-tests/fullscreen-plugin/: Makefile.am  run-locally.sh  test-fullscreen-plugin.py  tests.xml
libcontextsubscriber-plugins/customer-tests/profile/: Makefile.am  test-profile-plugin.py  test-profile.context  tests.xml
libcontextsubscriber-plugins/customer-tests/session/: Makefile.am  fake-blanking.context  runTests.sh  test-blanking.py  test-fullscreen.py  tests.xml
libcontextsubscriber-plugins/displaystate/: Makefile.am  displaystate.context  displaystateplugin.cpp  displaystateplugin.h
libcontextsubscriber-plugins/fullscreen/: Makefile.am  fullscreen.context  fullscreenplugin.cpp  fullscreenplugin.h  loggingfeatures.h
libcontextsubscriber-plugins/kbslider/: CMakeLists.txt  Makefile.am  kbslider.context  kbsliderplugin.cpp  kbsliderplugin.h
libcontextsubscriber-plugins/mce/: Makefile.am  mce.context  mceplugin.cpp  mceplugin.h
libcontextsubscriber-plugins/presence/: Makefile.am  presence.context  presenceplugin.cpp  presenceplugin.h
libcontextsubscriber-plugins/profile/: CMakeLists.txt  Makefile.am  loggingfeatures.h  profile.context  profileplugin.cpp  profileplugin.h
libcontextsubscriber-plugins/session/: .gitignore  Makefile.am  loggingfeatures.h  session.context  sessionplugin.cpp  sessionplugin.h
maemo/: CMakeLists.txt
maemo/bluez/: CMakeLists.txt  bluezdevice.cpp  bluezplugin.cpp
maemo/common/: CMakeLists.txt
maemo/customer-tests/profile/: runTests.sh  test-profile-plugin.py
maemo/kbslider/: CMakeLists.txt  kbsliderplugin.cpp
maemo/mce/: CMakeLists.txt  mceplugin.cpp  mceplugin.h
maemo/power/: CMakeLists.txt  bmeipc.c  power.cpp
maemo/presence/: CMakeLists.txt
maemo/profile/: CMakeLists.txt  profileplugin.cpp
maemo/session/: CMakeLists.txt  sessionplugin.cpp
meego/bluetooth/: CMakeLists.txt  bluetoothprovider.cpp  bluetoothprovider.h
meego/cellular/: CMakeLists.txt  cellularprovider.cpp  cellularprovider.h  org.ofono.manager.xml  org.ofono.networkregistration.xml
meego/connman/: CMakeLists.txt  connmanprovider.cpp  connmanprovider.h
meego/keyboard-generic/: CMakeLists.txt  plugin.cpp  plugin.hpp
n9-950-plugins/: CMakeLists.txt
n9-950-plugins/bluez/: CMakeLists.txt  bluezplugin.cpp
n9-950-plugins/customer-tests/bluez/: test-bluez-plugin.py  tests.xml
n9-950-plugins/customer-tests/dbusnamewatcher/: .gitignore
n9-950-plugins/customer-tests/profile/: tests.xml
n9-950-plugins/customer-tests/session/: session.context  test-blanking.py  test-fullscreen.py
n9-950-plugins/kbslider/: CMakeLists.txt  kbsliderplugin.cpp
n9-950-plugins/power/: .gitignore  CMakeLists.txt  bmeipc.h  power.cpp  power.hpp
n9-950-plugins/power/src/: bmeipc.c  (+2 more)
n9-950-plugins/presence/: CMakeLists.txt  presence.context  presenceplugin.cpp  presenceplugin.h
n9-950-plugins/profile/: CMakeLists.txt  profileplugin.cpp  profileplugin.h
n9-950-plugins/session/: CMakeLists.txt
session/: CMakeLists.txt  session.context  sessionplugin.cpp  sessionplugin.h
(+111 files in other folders)
